[gd_scene load_steps=5 format=3 uid="uid://cnbeqfdyytsyw"]

[ext_resource type="PackedScene" uid="uid://cqs37b7phgpov" path="res://assets/cartoon_plane.glb" id="1_8ly56"]
[ext_resource type="Script" path="res://planes/cartoon_plane.gd" id="1_jd4jm"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t0qgo"]
height = 3.67836
radius = 0.787597

[sub_resource type="BoxShape3D" id="BoxShape3D_cjru1"]
size = Vector3(6.67882, 0.231211, 1)

[node name="cartoon_plane" type="CharacterBody3D"]
script = ExtResource("1_jd4jm")

[node name="cartoon_plane" parent="." instance=ExtResource("1_8ly56")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, -1.5246e-23, -1.5246e-23, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_t0qgo")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0313349, -0.706618)
shape = SubResource("BoxShape3D_cjru1")

[node name="RightGun" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.24683, -0.225479, -1.30418)
target_position = Vector3(2.08165e-12, 2.08165e-12, -50)

[node name="LeftGun" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.247, -0.225, -1.304)
target_position = Vector3(2.08165e-12, 2.08165e-12, -50)

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
